padding, margin y modelo de caja

--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,11 @@ button {
 
 /* Inicio del codigo */
 
+.principal {
+    border-color: yellowgreen;
+    border-style: solid;
+}
+
 .principal p:nth-child(2n) {
     color: blue;
 }
@@ -22,4 +27,14 @@ button {
 
 .principal p::first-letter {
     color: red;
+}
+
+.principal .caja {
+    width: 50px;
+    height: 50px;
+    background-color: sienna;
+    border-color: teal;
+    border-style: solid;
+    border-width: 5px;
+    padding: 100px;
 }
