estilizando menu login

--- a/css/login.css
+++ b/css/login.css
@@ -1,12 +1,116 @@
 .login {
-    width: 100%;
     align-items: center;
+    background: linear-gradient(#834dfb, #21C08B);
+    padding: 0px 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    min-height: calc(100vh - 200px);
+    font-family: 'Mulish', sans-serif;
 }
 
 .login__container {
     border: 2px solid white;
-    border-radius: 20px;
-    padding: 10px;
-    width: 30%;
-    margin: auto;
+    border-radius: 40px;
+    width: 500px;
+    min-height: 900px;
+    background-color: rgba(255, 255, 255, 0.1);
+    padding: 60px 68px 40px;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+
+.login__container--form {
+    display: flex;
+    flex-direction: column;
+}
+
+
+.login__container--form label {
+    font-size: 14px;
+}
+
+.login__container--remember-me {
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+}
+
+.login__container--remember-me a {
+    text-decoration: none;
+    color: white;
+    font-size: 14px;
+}
+
+.login__container--remember-me a:hover {
+    text-decoration: underline;
+}
+
+.login__container--social-media>div {
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+    margin-bottom: 10px;
+}
+
+.login__container--social-media>div>img {
+    margin-right: 10px;
+    width: 30px;
+}
+
+.login__container--register {
+    font-size: 14px;
+}
+
+.login__container--register a {
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: bold;
+    color: white;
+}
+
+.login__container--register a:hover {
+    text-decoration: underline;
+}
+
+.input {
+    background-color: transparent;
+    border-top: 0px;
+    border-right: 0px;
+    border-left: 0px;
+    border-bottom: 2px solid white;
+    font-family: 'Mulish', sans-serif;
+    font-size: 16px;
+    margin-bottom: 20px;
+    padding: 0px 20px;
+    outline: none;
+    height: 50px;
+    color: white;
+}
+
+::placeholder {
+    color: white;
+}
+
+.button {
+    background-color: rgba(255, 255, 255, 0.1);
+    border: none;
+    border-radius: 30px;
+    height: 50px;
+    color: white;
+    font-size: 20px;
+    font-family: 'Mulish', sans-serif;
+    font-weight: bold;
+    cursor: pointer;
+    margin: 30px 0px;
+    letter-spacing: 2px;
+}
+
+.footer {
+    background-color: #21C08B;
+
 }
