--- a/css/main.css
+++ b/css/main.css
@@ -201,8 +201,22 @@ button {
 
 /* footer---------------------------------------------------- */
 
-footer ul {
+.footer {
     display: flex;
-    justify-content: space-evenly;
+    align-items: center;
     list-style: none;
+    width: 100%;
+    height: 100px;
+}
+
+.footer a {
+    color: white;
+    text-decoration: none;
+    padding-left: 30px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.footer a:hover {
+    text-decoration: underline;
 }
