--- a/css/registro.css
+++ b/css/registro.css
@@ -85,10 +85,20 @@
 }
 
 @media only screen and (max-width: 600px) {
+
     .registro__container {
         background: transparent;
         border: none;
-        padding: 0px;
         width: 100%;
+        padding: 20px;
     }
+
+    ::placeholder {
+        font-size: 16px;
+    }
+
+    .button {
+        font-size: 16px;
+    }
+
 }
