--- a/css/login.css
+++ b/css/login.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    min-height: calc(100vh - 200px);
+    max-height: calc(100vh - 240px);
     font-family: 'Mulish', sans-serif;
 }
 
@@ -13,7 +13,7 @@
     border: 2px solid white;
     border-radius: 40px;
     width: 500px;
-    min-height: 900px;
+    height: 900px;
     background-color: rgba(255, 255, 255, 0.1);
     padding: 60px 68px 40px;
     display: flex;
